welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value hauteur
  hauteur = getMondeHauteur()
  ^Array1:4: error: not found: value hauteur
  var motif = new Array[Color](hauteur)
                               ^Array1:5: error: not found: value hauteur
  for (i <- 0 to hauteur-1) {
                 ^Array1:6: error: not found: value couleur
    couleur = getCouleurSol()
    ^Array1:7: error: not found: value couleur
    motif(i) = couleur
               ^Array1:12: error: not found: value hauteur
  for (i <- 1 to hauteur) {
                 ^