welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  hauteur = getMondeHauteur()
  var motif = new Array[Color](hauteur)
  for (i <- 0 to hauteur-1) {
    couleur = getCouleurSol()
    motif(i) = couleur
    avance()
  }
  for (j <- 2 to getMondeLargeur()){
  gauche(); avance(); droite(); avance()
  for (i <- 1 to hauteur) {
    setCouleurBrosse(motif(i-1))
    baisseBrosse(); leveBrosse(); avance()
  }}
}